# simple-profiler

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
config/: com.simple-profiler.gpu-helper.plist.example  default.toml
docs/: coding-style.md  domain-models.md  project-overview.md
scripts/: extract-changelog.sh
src/: anomaly.rs  anomaly_storage.rs  capability_storage.rs  config.rs  dashboard.rs  instance.rs  lib.rs  logging.rs  main.rs  model.rs  process_storage.rs  report.rs  report_storage.rs  runtime.rs  service.rs  storage.rs
src/collector/: disk.rs  gpu.rs  mod.rs  network.rs  process.rs  system.rs
src/dashboard/: app.css  app.js  index.html
