[package]
name = "simple-profiler"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
getrandom = "0.3.4"
libc = "0.2.186"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
